// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form 1`] = `
<div
  className="row"
>
  <div
    className="formBox col-12 max-width-970 formBoxDefault"
  >
    <h1
      className="form-component__title"
    >
      SelectCompany
    </h1>
    <form
      className=""
      id="1507198229686"
      onSubmit={[Function]}
    >
      <div
        className="property-set form-row"
      />
      <div
        className="formActions"
      >
        <div>
          <button
            className="btn btn-primary"
            disabled={false}
            onClick={[Function]}
            title=""
            type="submit"
          >
            Submit
          </button>
           
        </div>
      </div>
    </form>
    <br />
  </div>
  <div
    className="col-12"
  />
</div>
`;

exports[`Form errorOnApply 1`] = `
<div
  className="row"
>
  <div
    className="formBox col-12 max-width-970 formBoxDefault"
  >
    <h1
      className="form-component__title"
    >
      Тестовая операция
    </h1>
    <form
      className=""
      id="1520488568877"
      onSubmit={[Function]}
    >
      <div
        className="property-set form-row"
      />
      <div
        className="formActions"
      >
        <div>
          <button
            className="btn btn-primary"
            disabled={false}
            onClick={[Function]}
            title=""
            type="submit"
          >
            Submit
          </button>
           
        </div>
      </div>
    </form>
    <br />
  </div>
  <div
    className="col-12"
  >
    <div
      className="errorPane"
    >
      <div
        className="errorPane__error"
      >
        <h1
          className="errorPane__title"
        >
          500
           - 
          Internal error occured during operation testtable.TestOperation
        </h1>
        <br />
        <pre
          className="errorPane__code"
          dangerouslySetInnerHTML={
            Object {
              "__html": "Be5Exception: Internal error occured during operation... ",
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`InlineForm 1`] = `
<form
  className="form-inline form-inline-mini"
  id="1507198229686"
  onSubmit={[Function]}
>
  <label
    className="mr-sm-2"
  >
    <strong>
      SelectCompany
    </strong>
  </label>
  <button
    className="btn btn-primary"
    disabled={false}
    onClick={[Function]}
    title=""
    type="submit"
  >
    Submit
  </button>
</form>
`;

exports[`ModalForm 1`] = `
<div>
  <div
    className="modal-header"
  >
    <h5
      className="modal-title"
    >
      SelectCompany
    </h5>
    <button
      aria-label="Close"
      className="close"
      onClick={[Function]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
  </div>
  <form
    className="form-modal"
    id="1507198229686"
    onSubmit={[Function]}
  >
    <div
      className="modal-body"
    >
      <div
        className="property-set form-row"
      />
    </div>
    <div
      className="col-12"
    />
    <div
      className="modal-footer"
    >
      <button
        className="btn btn-primary"
        disabled={false}
        onClick={[Function]}
        title=""
        type="submit"
      >
        Submit
      </button>
    </div>
  </form>
</div>
`;

exports[`SubmitOnChangeForm 1`] = `
<form
  className="submit-onchange-form"
  id="1507198229686"
>
  <input
    className="property-input form-control"
    id="companyIDPropertyInput"
    maxLength={undefined}
    onChange={[Function]}
    onInput={[Function]}
    onInvalid={[Function]}
    pattern={undefined}
    placeholder={undefined}
    required={true}
    size={undefined}
    type="text"
    value=""
  />
  <div
    className="col-12"
  />
</form>
`;
